Update to Commit 6e26f86fbbd89625c0163d66fb60b44bce5c68d2

--- a/css-conditions-cq-alternative.html
+++ b/css-conditions-cq-alternative.html
@@ -81,7 +81,8 @@ src="/images/profile-64.jpg"
 <p>
 @<a class="p-nickname" href="/">ausi</a> on
 <a class="u-url" href="https://twitter.com/ausi" rel="me">Twitter</a>,
-<a class="u-url" href="https://github.com/ausi" rel="me">GitHub</a> and
+<a class="u-url" href="https://github.com/ausi" rel="me">GitHub</a>,
+<a class="u-url" href="https://www.patreon.com/ausi" rel="me">Patreon</a> and
 <a class="u-url" href="https://stackoverflow.com/users/1031606/ausi" rel="me">Stack Overflow</a>
 </p>
 </footer>
